// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor basic add stamps to inline value 1`] = `
"[~]
[?] <買> vs <賣>？ 000
[+]
[-]"
`;

exports[`Editor basic add stamps to inline value 2`] = `
Array [
  Object {
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "new": true,
    "poll": true,
    "pollChoices": Array [
      "<買>",
      "<賣>",
    ],
    "stampId": "000",
    "str": " <買> vs <賣>？",
  },
]
`;

exports[`Editor basic insert markerlines to a blank editor 1`] = `
"
[?]
<買> vs <賣>？ 00h 00i
"
`;

exports[`Editor basic insert markerlines to a blank editor 2`] = `
Array [
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？ 00h",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": true,
    "pollChoices": Array [
      "<買>",
      "<賣>",
    ],
    "src": undefined,
    "stampId": "00i",
    "str": "<買> vs <賣>？ 00h",
  },
]
`;

exports[`Editor basic insert markerlines to an editxor with existed value 1`] = `
"[~]
[[生物技術]] 00o 00r
[?] <買> vs <賣>？ 00j 00s
[+]
@巴菲特2020Q4加倉 00q 00t
@ARK開倉 00p 00u
[-]
"
`;

exports[`Editor basic insert markerlines to an editxor with existed value 2`] = `
Array [
  Object {
    "comment": undefined,
    "linenumber": 1,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]] 00o",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "00r",
    "str": "[[生物技術]] 00o",
  },
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？ 00j",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": true,
    "pollChoices": Array [
      "<買>",
      "<賣>",
    ],
    "src": undefined,
    "stampId": "00s",
    "str": " <買> vs <賣>？ 00j",
  },
  Object {
    "comment": undefined,
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "@巴菲特2020Q4加倉 00q",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "00t",
    "str": "@巴菲特2020Q4加倉 00q",
  },
  Object {
    "comment": undefined,
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "@ARK開倉 00p",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "00u",
    "str": "@ARK開倉 00p",
  },
]
`;

exports[`Editor basic insert markerlines to an editxor with existed value and connected contents 1`] = `
"[~]
[[生物技術]] 010 011
[?] <買> vs <賣>？ 00v 012
[+]
[-]
"
`;

exports[`Editor basic insert markerlines to an editxor with existed value and connected contents 2`] = `
Array [
  Object {
    "comment": undefined,
    "linenumber": 1,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]] 010",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "011",
    "str": "[[生物技術]] 010",
  },
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？ 00v",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": true,
    "pollChoices": Array [
      "<買>",
      "<賣>",
    ],
    "src": undefined,
    "stampId": "012",
    "str": " <買> vs <賣>？ 00v",
  },
]
`;

exports[`Editor basic parse stamped inline value 1`] = `
Array [
  Object {
    "root": true,
    "stream": Array [
      Object {
        "content": Array [
          Object {
            "content": "[~]",
            "length": 3,
            "linenumber": 0,
            "marker": Object {
              "key": "[~]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 0,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[?]",
            "length": 3,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
            },
            "type": "inline-mark",
          },
          Object {
            "content": Array [
              " ",
              Object {
                "content": "<買>",
                "length": 3,
                "linenumber": 1,
                "type": "vote-chocie",
              },
              " vs ",
              Object {
                "content": "<賣>",
                "length": 3,
                "linenumber": 1,
                "type": "vote-chocie",
              },
              "？ 004",
            ],
            "length": 16,
            "linenumber": 1,
            "marker": Object {
              "key": "[?]",
              "value": "<買> vs <賣>？ 004",
            },
            "type": "inline-value",
          },
        ],
        "length": 19,
        "linenumber": 1,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[+]",
            "length": 3,
            "linenumber": 2,
            "marker": Object {
              "key": "[+]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 2,
        "type": "inline-marker",
      },
      "
",
      Object {
        "content": Array [
          Object {
            "content": "[-]",
            "length": 3,
            "linenumber": 3,
            "marker": Object {
              "key": "[-]",
            },
            "type": "inline-mark",
          },
        ],
        "length": 3,
        "linenumber": 3,
        "type": "inline-marker",
      },
    ],
  },
]
`;

exports[`Editor use sample data does basic edit 1`] = `
"
[?]<買> vs <賣>？ %100
[~] [[生物技術]] 013
[+]
@ARK開倉 014
@巴菲特2020Q4加倉 015
[-]"
`;

exports[`Editor use sample data does basic edit 2`] = `
Array [
  Object {
    "broken": true,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "<買> vs <賣>？",
    },
    "nestedCard": undefined,
    "stampId": "%100",
    "str": "<買> vs <賣>？ %100",
  },
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[~]",
      "value": "[[生物技術]]",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "some.source",
    "stampId": "013",
    "str": " [[生物技術]]",
  },
  Object {
    "comment": undefined,
    "linenumber": 4,
    "marker": Object {
      "key": "[+]",
      "value": "@ARK開倉",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "some.source",
    "stampId": "014",
    "str": "@ARK開倉",
  },
  Object {
    "comment": undefined,
    "linenumber": 5,
    "marker": Object {
      "key": "[+]",
      "value": "@巴菲特2020Q4加倉",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": "@someauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "some.source",
    "stampId": "015",
    "str": "@巴菲特2020Q4加倉",
  },
]
`;

exports[`Editor use sample data edit text from previous stored text 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] 016
[?] B@23-25 小倉位 017
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪
- 情報
- 企業決策中心
[+]
提供政府服務 018
營收增長高 019
利潤率進步 01a
[-]
至今10多年仍無法盈利 01b
需要商業化，不僅是做政府生意 01c

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 01d"
`;

exports[`Editor use sample data edit text from previous stored text 2`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] %hF7
[?] B@23-25 小倉位 %3qR
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪 %3Wx
- 情報 %5uM
- 企業決策中心 %Bv0
對象：各國政府，FBI、CIA、美軍等 01e
有125個客戶，企業營收佔44%，除美國外商業營收增長低 01f
[+]
提供政府服務 %nhh
營收增長高 %Hfx
利潤率進步 %xB7
現金充足，財務沒有問題 01g
有炒股動力，@ARK、@WSB皆關注 01h
[-]
至今10多年仍無法盈利 %i61
需要商業化，不僅是做政府生意 %vYk
股權獎勵高，拉低盈利 01i
很難做到像消費者級別的量，增長的想像空間不大 01j

[[太空股]]
[+]
有美國軍方、政府在背後支持扶持，有國家利益，藉資本市場孵化 %vjo
[[Elon Musk]]、[[Bezos]]、[[Ark]]均投入太空市場 01k
太空商業化將帶來新的商業模式 01l"
`;

exports[`Editor use sample data generate markerline 1`] = `
"$PLTR
[=] [[大數據]] [[SaaS]] 01m
[?] B@23-25 小倉位 01n
[*]
產品：用大數據和人工智能幫情報局及美軍尋找目標，戰略分析、決策模擬、分析關鍵訊息等數據，反金融犯罪
- 情報
- 企業決策中心
對象：各國政府，FBI、CIA、美軍等 01o
有125個客戶，企業營收佔44%，除美國外商業營收增長低 01p
[+]
提供政府服務 01q
營收增長高 01r
利潤率進步 01s
現金充足，財務沒有問題 01t
有炒股動力，@ARK、@WSB皆關注 01u
[-]
至今10多年仍無法盈利 01v
需要商業化，不僅是做政府生意 01w
股權獎勵高，拉低盈利 01x
很難做到像消費者級別的量，增長的想像空間不大 01y"
`;

exports[`Editor use sample data generate markerline 2`] = `
Array [
  Object {
    "comment": undefined,
    "linenumber": 1,
    "marker": Object {
      "key": "[=]",
      "value": "[[大數據]] [[SaaS]]",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01m",
    "str": " [[大數據]] [[SaaS]]",
  },
  Object {
    "comment": true,
    "linenumber": 2,
    "marker": Object {
      "key": "[?]",
      "value": "B@23-25 小倉位",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01n",
    "str": " B@23-25 小倉位",
  },
  Object {
    "comment": undefined,
    "linenumber": 7,
    "marker": Object {
      "key": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01o",
    "str": "對象：各國政府，FBI、CIA、美軍等",
  },
  Object {
    "comment": undefined,
    "linenumber": 8,
    "marker": Object {
      "key": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01p",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低",
  },
  Object {
    "comment": undefined,
    "linenumber": 10,
    "marker": Object {
      "key": "[+]",
      "value": "提供政府服務",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01q",
    "str": "提供政府服務",
  },
  Object {
    "comment": undefined,
    "linenumber": 11,
    "marker": Object {
      "key": "[+]",
      "value": "營收增長高",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01r",
    "str": "營收增長高",
  },
  Object {
    "comment": undefined,
    "linenumber": 12,
    "marker": Object {
      "key": "[+]",
      "value": "利潤率進步",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01s",
    "str": "利潤率進步",
  },
  Object {
    "comment": undefined,
    "linenumber": 13,
    "marker": Object {
      "key": "[+]",
      "value": "現金充足，財務沒有問題",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01t",
    "str": "現金充足，財務沒有問題",
  },
  Object {
    "comment": undefined,
    "linenumber": 14,
    "marker": Object {
      "key": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01u",
    "str": "有炒股動力，@ARK、@WSB皆關注",
  },
  Object {
    "comment": undefined,
    "linenumber": 16,
    "marker": Object {
      "key": "[-]",
      "value": "至今10多年仍無法盈利",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01v",
    "str": "至今10多年仍無法盈利",
  },
  Object {
    "comment": undefined,
    "linenumber": 17,
    "marker": Object {
      "key": "[-]",
      "value": "需要商業化，不僅是做政府生意",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01w",
    "str": "需要商業化，不僅是做政府生意",
  },
  Object {
    "comment": undefined,
    "linenumber": 18,
    "marker": Object {
      "key": "[-]",
      "value": "股權獎勵高，拉低盈利",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01x",
    "str": "股權獎勵高，拉低盈利",
  },
  Object {
    "comment": undefined,
    "linenumber": 19,
    "marker": Object {
      "key": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.youtube.com/watch?v=qSYGlOZNUCw",
    "stampId": "01y",
    "str": "很難做到像消費者級別的量，增長的想像空間不大",
  },
]
`;

exports[`Editor use sample data generate markerline 3`] = `
"$PLTR
[?] \\"预计该股票会有更大的波动性\\" #無幫助 01z
[*]
產品：3个软件平台
- Foundry：帮公司构建自己的SaaS来充当数据应用程序的操作系统，以获取预测，可能的结果，建议等。
- Gotham：用于情报，执法和国防安全领域的软件平台，它可以识别模式并预测数据以帮助预防犯罪。
- Apollo：平台背后的平台，自动监视,管理与更新Foundry和Gotham的软件。类似Microsoft，Apple或Google更新他们软件的方式。
[+]
\\"并不完全地依赖政府。他们还拥有18亿现金\\" 020"
`;

exports[`Editor use sample data generate markerline 4`] = `
Array [
  Object {
    "comment": true,
    "linenumber": 1,
    "marker": Object {
      "key": "[?]",
      "value": "\\"预计该股票会有更大的波动性\\" #無幫助",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "01z",
    "str": " \\"预计该股票会有更大的波动性\\" #無幫助",
  },
  Object {
    "comment": undefined,
    "linenumber": 8,
    "marker": Object {
      "key": "[+]",
      "value": "\\"并不完全地依赖政府。他们还拥有18亿现金\\"",
    },
    "neatReply": undefined,
    "nestedCard": Object {
      "oauthor": undefined,
      "symbol": "$PLTR",
    },
    "new": true,
    "oauthor": "@oauthor",
    "poll": undefined,
    "pollChoices": undefined,
    "src": "https://www.facebook.com/photo?fbid=252791219783086&set=a.235741574821384",
    "stampId": "020",
    "str": "\\"并不完全地依赖政府。他们还拥有18亿现金\\"",
  },
]
`;

exports[`Editor use sample data handle common cases 1`] = `
"[~] aaa 040
[?]
<買> vs <賣> 041
[+]
[-]"
`;

exports[`Editor use sample data handle common cases 2`] = `
"$AAA
[=]
[?]
- <買> vs <賣> 042
[+]
[-]

[[TOPIC]]
[=]
[?]買 vs 賣？ 043
[+]
[-]

$BBB
[=]
[?]買 vs 賣？ 044
[+]
[-]"
`;

exports[`Editor use sample data insert markerlines 1`] = `
"
[=]
[[大數據]] [[SaaS]] 02e 02r 03l
[?]
\\"预计该股票会有更大的波动性\\" #無幫助 03j 03m
B@23-25 小倉位 02f 02s 03n
[*]
有125個客戶，企業營收佔44%，除美國外商業營收增長低 02h 02t 03o
對象：各國政府，FBI、CIA、美軍等 02g 02u 03p
[+]
\\"并不完全地依赖政府。他们还拥有18亿现金\\" 03k 03q
有炒股動力，@ARK、@WSB皆關注 02m 02v 03r
現金充足，財務沒有問題 02l 02w 03s
利潤率進步 02k 02x 03t
營收增長高 02j 02y 03u
提供政府服務 02i 02z 03v
[-]
很難做到像消費者級別的量，增長的想像空間不大 02q 030 03w
股權獎勵高，拉低盈利 02p 031 03x
需要商業化，不僅是做政府生意 02o 032 03y
至今10多年仍無法盈利 02n 033 03z

"
`;

exports[`Editor use sample data insert markerlines 2`] = `
Array [
  Object {
    "comment": undefined,
    "linenumber": 2,
    "marker": Object {
      "key": "[=]",
      "value": "[[大數據]] [[SaaS]] 02e 02r",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03l",
    "str": "[[大數據]] [[SaaS]] 02e 02r",
  },
  Object {
    "comment": true,
    "linenumber": 4,
    "marker": Object {
      "key": "[?]",
      "value": "\\"预计该股票会有更大的波动性\\" #無幫助 03j",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03m",
    "str": "\\"预计该股票会有更大的波动性\\" #無幫助 03j",
  },
  Object {
    "comment": true,
    "linenumber": 5,
    "marker": Object {
      "key": "[?]",
      "value": "B@23-25 小倉位 02f 02s",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03n",
    "str": "B@23-25 小倉位 02f 02s",
  },
  Object {
    "comment": undefined,
    "linenumber": 7,
    "marker": Object {
      "key": "[*]",
      "value": "有125個客戶，企業營收佔44%，除美國外商業營收增長低 02h 02t",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03o",
    "str": "有125個客戶，企業營收佔44%，除美國外商業營收增長低 02h 02t",
  },
  Object {
    "comment": undefined,
    "linenumber": 8,
    "marker": Object {
      "key": "[*]",
      "value": "對象：各國政府，FBI、CIA、美軍等 02g 02u",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03p",
    "str": "對象：各國政府，FBI、CIA、美軍等 02g 02u",
  },
  Object {
    "comment": undefined,
    "linenumber": 10,
    "marker": Object {
      "key": "[+]",
      "value": "\\"并不完全地依赖政府。他们还拥有18亿现金\\" 03k",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03q",
    "str": "\\"并不完全地依赖政府。他们还拥有18亿现金\\" 03k",
  },
  Object {
    "comment": undefined,
    "linenumber": 11,
    "marker": Object {
      "key": "[+]",
      "value": "有炒股動力，@ARK、@WSB皆關注 02m 02v",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03r",
    "str": "有炒股動力，@ARK、@WSB皆關注 02m 02v",
  },
  Object {
    "comment": undefined,
    "linenumber": 12,
    "marker": Object {
      "key": "[+]",
      "value": "現金充足，財務沒有問題 02l 02w",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03s",
    "str": "現金充足，財務沒有問題 02l 02w",
  },
  Object {
    "comment": undefined,
    "linenumber": 13,
    "marker": Object {
      "key": "[+]",
      "value": "利潤率進步 02k 02x",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03t",
    "str": "利潤率進步 02k 02x",
  },
  Object {
    "comment": undefined,
    "linenumber": 14,
    "marker": Object {
      "key": "[+]",
      "value": "營收增長高 02j 02y",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03u",
    "str": "營收增長高 02j 02y",
  },
  Object {
    "comment": undefined,
    "linenumber": 15,
    "marker": Object {
      "key": "[+]",
      "value": "提供政府服務 02i 02z",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03v",
    "str": "提供政府服務 02i 02z",
  },
  Object {
    "comment": undefined,
    "linenumber": 17,
    "marker": Object {
      "key": "[-]",
      "value": "很難做到像消費者級別的量，增長的想像空間不大 02q 030",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03w",
    "str": "很難做到像消費者級別的量，增長的想像空間不大 02q 030",
  },
  Object {
    "comment": undefined,
    "linenumber": 18,
    "marker": Object {
      "key": "[-]",
      "value": "股權獎勵高，拉低盈利 02p 031",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03x",
    "str": "股權獎勵高，拉低盈利 02p 031",
  },
  Object {
    "comment": undefined,
    "linenumber": 19,
    "marker": Object {
      "key": "[-]",
      "value": "需要商業化，不僅是做政府生意 02o 032",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03y",
    "str": "需要商業化，不僅是做政府生意 02o 032",
  },
  Object {
    "comment": undefined,
    "linenumber": 20,
    "marker": Object {
      "key": "[-]",
      "value": "至今10多年仍無法盈利 02n 033",
    },
    "neatReply": undefined,
    "nestedCard": undefined,
    "new": true,
    "oauthor": undefined,
    "poll": undefined,
    "pollChoices": undefined,
    "src": undefined,
    "stampId": "03z",
    "str": "至今10多年仍無法盈利 02n 033",
  },
]
`;
